[package]

name = "bitflags"
# NB: When modifying, also modify:
#   1. html_root_url in lib.rs
#   2. number in readme (for breaking changes)
version = "1.2.1"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
keywords = ["bit", "bitmask", "bitflags", "flags"]
readme = "README.md"
repository = "https://github.com/bitflags/bitflags"
homepage = "https://github.com/bitflags/bitflags"
documentation = "https://docs.rs/bitflags"
categories = ["no-std"]
description = """
A macro to generate structures which behave like bitflags.
"""
exclude = [
    ".travis.yml",
    "appveyor.yml",
    "bors.toml"
]
build = "build.rs"

[badges]
travis-ci = { repository = "bitflags/bitflags" }

[features]
default = ["rustc-dep-of-std"]
# Unstable feature to support being a libstd dependency
rustc-dep-of-std = ["compiler_builtins", "core", "alloc"]

example_generated = []

[package.metadata.docs.rs]
features = [ "example_generated" ]

[workspace]
members = ["test_suite"]

[dependencies]
compiler_builtins = {version = "0.1", optional = true}
core = {version = "1.0", optional = true, package = "rustc-std-workspace-core"}
alloc = {version = "1.0", optional = true, package = "rustc-std-workspace-alloc"}
